--- a/style/common.css
+++ b/style/common.css
@@ -49,12 +49,21 @@ body {
   font-style: normal;
   font-weight: 700;
 }
-main {
+main section {
+  width: 100%;
   display: flex;
-  align-items: center;
   flex-direction: column;
+  align-items: center;
 }
-main h2 {
+main section .content {
+  height: 100%;
+}
+main section .bar {
+  background-color: rgb(113, 7, 7);
+  height: 3px;
+  width: 100%;
+}
+main section h2 {
   text-transform: uppercase;
   font-family: Forum, serif;
 }
