--- a/style/header.css
+++ b/style/header.css
@@ -1,3 +1,16 @@
+header {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  background: rgb(3, 3, 3);
+}
+header #line {
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
 header #line nav ul li {
   height: 100%;
   width: 100%;
@@ -22,18 +35,9 @@ header #line nav ul li a:active {
 @media (min-width: 1920px) {
   header {
     height: 150px;
-    width: 100%;
-    background: rgb(3, 3, 3);
-    display: flex;
-    align-items: center;
-    flex-direction: column;
   }
   header #line {
-    height: 100%;
     width: 1440px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
   }
   header #line nav {
     height: 100%;
@@ -55,6 +59,21 @@ header #line nav ul li a:active {
     font-size: 22px;
     line-height: 100%;
     letter-spacing: 2px;
+  }
+}
+@media (min-width: 1024px) and (max-width: 1919px) {
+  header {
+    height: 130px;
+  }
+  header #line {
+    width: 984px;
+  }
+  header #line nav {
+    background: red;
+    width: 100px;
+  }
+  header #line nav ul {
+    display: none;
   }
 }
 
