--- a/style/visiting.css
+++ b/style/visiting.css
@@ -26,22 +26,14 @@
   }
   #visiting .content .panorama-container .panorama h3 {
     margin-top: 25px;
-    font-family: Forum, serif;
-    font-weight: 400;
     font-size: 32px;
-    line-height: 100%;
     letter-spacing: 5px;
-    text-transform: uppercase;
   }
   #visiting .content .panorama-container .panorama .panorama-bar {
     margin-top: 10px;
     width: 300px;
   }
   #visiting .content .panorama-container .panorama p {
-    font-family: Roboto, sans-serif;
-    line-height: 100%;
-    font-weight: 200;
-    color: rgb(0, 0, 0);
     margin-top: 10px;
   }
   #visiting .content .panorama-container .panorama p.top {
@@ -53,15 +45,70 @@
 }
 @media (min-width: 1024px) and (max-width: 1919px) {
   #visiting {
-    padding: 60px 0;
+    padding: 60px 0 0 0;
   }
   #visiting .content {
-    height: 1313px;
+    height: 1373px;
+    border: 2px solid red;
+  }
+  #visiting .content .panorama-container {
+    padding: 60px 108px;
+    border: 1px solid red;
+    height: 1275px;
+    width: 100%;
+    display: grid;
+    align-content: space-between;
+    align-items: center;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(3, 1fr);
+    justify-content: space-between;
+    justify-items: center;
+  }
+  #visiting .content .panorama-container .panorama {
+    border: 1px solid red;
+    width: 330px;
+    height: 345px;
+  }
+  #visiting .content .panorama-container .panorama img {
+    width: 330px;
+    height: 215px;
+  }
+  #visiting .content .panorama-container .panorama h3 {
+    height: 31px;
+    margin-top: 25px;
+    font-size: 28px;
+    letter-spacing: 3px;
+  }
+  #visiting .content .panorama-container .panorama .panorama-bar {
+    margin-top: 9px;
+  }
+  #visiting .content .panorama-container .panorama p.top {
+    height: 23px;
+    margin-top: 10px;
+    font-size: 20px;
+  }
+  #visiting .content .panorama-container .panorama p.bottom {
+    height: 19px;
+    margin-top: 10px;
+    font-size: 16px;
   }
 }
 #visiting {
   display: flex;
   justify-content: center;
+}
+#visiting .content .panorama-container .panorama h3 {
+  width: 100%;
+  font-family: Forum, serif;
+  text-transform: uppercase;
+  line-height: 100%;
+  font-weight: 400;
+}
+#visiting .content .panorama-container .panorama p {
+  font-family: Roboto, sans-serif;
+  line-height: 100%;
+  font-weight: 200;
+  color: rgb(0, 0, 0);
 }
 
 .panorama-bar {
