--- a/style/gallery.scss
+++ b/style/gallery.scss
@@ -15,12 +15,31 @@
           transform: translateY(-50px);
         }
         .gallery-fogging {
-          display: block;
           height: 360px;
-          position: absolute;
-          bottom: 0;
-          width: 100%;
-          background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000000 100%);
+          margin-bottom: 70px;
+        }
+      }
+    }
+  }
+}
+
+
+@media (min-width: 1024px) and (max-width: 1919px) {
+  #gallery {
+    .content {
+      margin-top: 75px;
+      height: 1460px;
+      .container {
+        margin-top: 110px;
+        .column {
+          width: 304px;
+          .picture {
+            padding-bottom: 24px;
+          }
+        }
+        .gallery-fogging {
+          height: 239px;
+          margin-bottom: 100px;
         }
       }
     }
@@ -30,20 +49,35 @@
 
 
 #gallery {
+  position: relative;
+  z-index: -3;
   .container {
     display: flex;
     justify-content: space-between;
     position: relative;
+    z-index: -3;
     .column {
       display: flex;
       flex-direction: column;
       position: relative;
+      z-index: -2;
       .picture {
         img {
           width: 100%;
           height: 100%;
         }
       }
+    }
+    .central {
+      transform: translateY(-50px);
+    }
+    .gallery-fogging {
+      display: block;
+      position: absolute;
+      z-index: -1;
+      bottom: 0;
+      width: 100%;
+      background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000000 100%);
     }
   }
 }
