--- a/style/style.css
+++ b/style/style.css
@@ -38,11 +38,22 @@
     text-transform: uppercase;
   }
 }
-@media (min-width: 1024px) {
-  main .bar {
+@media (min-width: 1024px) and (max-width: 1919px) {
+  main section .bar {
     margin-top: 20px;
+    width: 100%;
   }
-  main .content {
+  main section h2 {
+    width: 100%;
+    height: 75px;
+    font-family: Forum, serif;
+    font-weight: 400;
+    font-size: 50px;
+    line-height: 75px;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+  }
+  main section .content {
     width: 984px;
   }
 }
