--- a/style/style.scss
+++ b/style/style.scss
@@ -44,13 +44,26 @@
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1024px) and (max-width: 1919px) {
   main {
-    .bar {
-      margin-top: 20px;
-    }
-    .content{
-      width: 984px;
+    section {
+      .bar {
+        margin-top: 20px;
+        width: 100%;
+      }
+      h2 {
+        width: 100%;
+        height: 75px;
+        font-family: Forum, serif;
+        font-weight: 400;
+        font-size: 50px;
+        line-height: 75px;
+        letter-spacing: 5px;
+        text-transform: uppercase;
+      }
+      .content{
+        width: 984px;
+      }
     }
 
   }
