--- a/style/tickets.css
+++ b/style/tickets.css
@@ -17,16 +17,10 @@
     position: relative;
   }
   #tickets .content .container .item h5 {
-    font-family: Roboto, sans-serif;
-    font-weight: 700;
     font-size: 28px;
-    line-height: 100%;
   }
   #tickets .content .container .item label {
-    font-family: Roboto, sans-serif;
-    font-weight: 300;
     font-size: 22px;
-    line-height: 100%;
   }
   #tickets .content .container .item .ticket-type {
     position: absolute;
@@ -102,29 +96,18 @@
     display: flex;
     justify-content: space-evenly;
     position: absolute;
-    border: 3px solid black;
     width: 150px;
     height: 50px;
     top: 41px;
     right: 0;
   }
   #tickets .content .container .amount .ticket-pick .counter button, #tickets .content .container .amount .ticket-pick .counter input {
-    border: none;
-    background-color: white;
-    color: black;
     width: 30px;
-    text-align: center;
     display: inline-block;
-    font-family: Roboto, sans-serif;
     font-size: 22px;
-    line-height: 100%;
-  }
-  #tickets .content .container .amount .ticket-pick .counter input {
-    font-weight: 300;
   }
   #tickets .content .container .amount .ticket-pick .counter button {
     font-size: 32px;
-    font-weight: 400;
   }
   #tickets .content .container #total-prise {
     width: 200px;
@@ -140,23 +123,120 @@
     top: 393px;
     right: 0;
     position: absolute;
-    font-family: Roboto, sans-serif;
-    font-weight: 300;
     font-size: 22px;
-    line-height: 100%;
     letter-spacing: 2px;
+  }
+}
+@media (min-width: 1024px) and (max-width: 1919px) {
+  #tickets {
+    padding: 60px 0;
+  }
+  #tickets .content {
+    height: 598px;
+  }
+  #tickets .content h2 {
+    height: 75px;
+  }
+  #tickets .content .container {
+    display: grid;
+    grid-template-columns: 700px 175px;
+    grid-template-rows: 440px;
+    justify-content: space-between;
+    margin-top: 60px;
+  }
+  #tickets .content .container img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+  }
+  #tickets .content .container h5 {
+    font-size: 28px;
+  }
+  #tickets .content .container .ticket-type {
+    display: none;
+  }
+  #tickets .content .container .amount {
+    position: relative;
+    height: 321px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  #tickets .content .container .amount .ticket-pick {
+    width: 175px;
+    height: 90px;
+  }
+  #tickets .content .container .amount .ticket-pick label {
+    display: block;
+    font-size: 22px;
+    margin-bottom: 10px;
+  }
+  #tickets .content .container .amount .ticket-pick .counter {
+    width: 100%;
+    height: 50px;
+    display: grid;
+    grid-template-columns: repeat(3, 50px);
+    justify-content: space-between;
+  }
+  #tickets .content .container .amount .ticket-pick .counter input {
+    font-size: 22px;
     text-align: center;
-    vertical-align: middle;
-    background-color: black;
-    color: white;
   }
-  #tickets .content .container #buy {
-    transition: color 0.5s ease, background-color 0.5s ease;
+  #tickets .content .container .amount .ticket-pick .counter button {
+    font-size: 32px;
   }
-  #tickets .content .container #buy:hover {
-    background: rgb(157, 134, 101);
-    color: black;
+  #tickets .content .container .amount #buy {
+    font-size: 22px;
+    position: absolute;
+    bottom: -121px;
+    left: 0;
+    width: 100%;
+    height: 50px;
+    z-index: 100;
   }
+}
+#tickets .content .container h5 {
+  font-family: Roboto, sans-serif;
+  font-weight: 700;
+  line-height: 100%;
+}
+#tickets .content .container label {
+  line-height: 100%;
+  font-family: Roboto, sans-serif;
+  font-weight: 300;
+}
+#tickets .content .container .ticket-pick .counter {
+  border: 3px solid black;
+}
+#tickets .content .container .ticket-pick .counter button {
+  border: none;
+  color: black;
+  background-color: white;
+  font-weight: 400;
+  text-align: center;
+  font-family: Roboto, sans-serif;
+  line-height: 100%;
+}
+#tickets .content .container .ticket-pick .counter input {
+  color: black;
+  font-weight: 300;
+  text-align: center;
+  font-family: Roboto, sans-serif;
+  line-height: 100%;
+}
+#tickets .content .container #buy {
+  font-weight: 300;
+  line-height: 100%;
+  font-family: Roboto, sans-serif;
+  text-align: center;
+  vertical-align: middle;
+  background-color: black;
+  color: white;
+  transition: color 0.5s ease, background-color 0.5s ease;
+}
+#tickets .content .container #buy:hover {
+  background: rgb(157, 134, 101);
+  color: black;
 }
 #tickets input[type=number] {
   -moz-appearance: textfield;
