--- a/style/tickets.scss
+++ b/style/tickets.scss
@@ -17,17 +17,11 @@
           position: relative;
 
           h5 {
-            font-family: Roboto, sans-serif;
-            font-weight: 700;
             font-size: 28px;
-            line-height: 100%;
           }
 
           label {
-            font-family: Roboto, sans-serif;
-            font-weight: 300;
             font-size: 22px;
-            line-height: 100%;
           }
 
           .ticket-type {
@@ -110,31 +104,19 @@
               display: flex;
               justify-content: space-evenly;
               position: absolute;
-              border: 3px solid black;
               width: 150px;
               height: 50px;
               top: 41px;
               right: 0;
 
               button, input {
-                border: none;
-                background-color: white;
-                color: black;
                 width: 30px;
-                text-align: center;
                 display: inline-block;
-                font-family: Roboto, sans-serif;
                 font-size: 22px;
-                line-height: 100%;
-              }
-
-              input {
-                font-weight: 300;
               }
 
               button {
                 font-size: 32px;
-                font-weight: 400;
               }
             }
           }
@@ -155,24 +137,78 @@
           top: 393px;
           right: 0;
           position: absolute;
-          font-family: Roboto, sans-serif;
-          font-weight: 300;
           font-size: 22px;
-          line-height: 100%;
           letter-spacing: 2px;
-          text-align: center;
-          vertical-align: middle;
-          background-color: black;
-          color: white;
         }
+      }
+    }
+  }
+}
 
-        #buy {
-          transition: color 0.5s ease, background-color 0.5s ease;
+
+@media (min-width: 1024px) and (max-width: 1919px) {
+  #tickets {
+    padding: 60px 0;
+    .content {
+      height: 598px;
+      h2 {
+        height: 75px;
+      }
+      .container {
+        display: grid;
+        grid-template-columns: 700px 175px;
+        grid-template-rows: 440px;
+        justify-content: space-between;
+        margin-top: 60px;
+        img {
+          height: 100%;
+          width: 100%;
+          object-fit: cover;
         }
-
-        #buy:hover {
-          background: rgba(157, 134, 101, 1);
-          color: black;
+        h5 {
+          font-size: 28px;
+        }
+        .ticket-type {
+          display: none;
+        }
+        .amount {
+          position: relative;
+          height: 321px;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          .ticket-pick {
+            width: 175px;
+            height: 90px;
+            label {
+              display: block;
+              font-size: 22px;
+              margin-bottom: 10px;
+            }
+            .counter {
+              width: 100%;
+              height: 50px;
+              display: grid;
+              grid-template-columns: repeat(3, 50px);
+              justify-content: space-between;
+              input {
+                font-size: 22px;
+                text-align: center;
+              }
+              button {
+                font-size: 32px;
+              }
+            }
+          }
+          #buy {
+            font-size: 22px;
+            position: absolute;
+            bottom: -121px;
+            left: 0;
+            width: 100%;
+            height: 50px;
+            z-index: 100;
+          }
         }
       }
     }
@@ -181,6 +217,55 @@
 
 
 #tickets {
+  .content {
+    .container {
+      h5 {
+        font-family: Roboto, sans-serif;
+        font-weight: 700;
+        line-height: 100%;
+      }
+      label {
+        line-height: 100%;
+        font-family: Roboto, sans-serif;
+        font-weight: 300;
+      }
+      .ticket-pick {
+        .counter {
+          border: 3px solid black;
+          button {
+            border: none;
+            color: black;
+            background-color: white;
+            font-weight: 400;
+            text-align: center;
+            font-family: Roboto, sans-serif;
+            line-height: 100%;
+          }
+          input {
+            color: black;
+            font-weight: 300;
+            text-align: center;
+            font-family: Roboto, sans-serif;
+            line-height: 100%;
+          }
+        }
+      }
+      #buy {
+        font-weight: 300;
+        line-height: 100%;
+        font-family: Roboto, sans-serif;
+        text-align: center;
+        vertical-align: middle;
+        background-color: black;
+        color: white;
+        transition: color 0.5s ease, background-color 0.5s ease;
+      }
+      #buy:hover {
+        background: rgba(157, 134, 101, 1);
+        color: black;
+      }
+    }
+  }
   input[type=number] {
     -moz-appearance: textfield;
   }
