--- a/style/contacts.css
+++ b/style/contacts.css
@@ -18,31 +18,70 @@
   }
   #contacts .content .container .description h5 {
     width: 227px;
-    font-family: Roboto, sans-serif;
-    font-weight: 500;
     font-size: 28px;
-    line-height: 100%;
   }
   #contacts .content .container .description ul {
     position: absolute;
     top: 116px;
     left: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
     height: 128px;
-    list-style: none;
   }
   #contacts .content .container .description ul li {
-    font-family: Roboto, sans-serif;
-    font-weight: 300;
     font-size: 22px;
-    line-height: 100%;
   }
-  #contacts .content .container .map {
+  #contacts .content .container #map {
     width: 960px;
     height: 620px;
   }
+}
+@media (min-width: 1024px) and (max-width: 1919px) {
+  #contacts {
+    padding: 60px 0;
+  }
+  #contacts .content {
+    height: 614px;
+  }
+  #contacts .content .container {
+    padding-top: 60px;
+    display: grid;
+    grid-template-columns: 274px 694px;
+    grid-template-rows: 454px;
+    justify-content: space-between;
+  }
+  #contacts .content .container .description h5 {
+    height: 56px;
+    width: 185px;
+    font-size: 24px;
+  }
+  #contacts .content .container .description ul {
+    width: 274px;
+    height: 99px;
+    margin-top: 35px;
+  }
+  #contacts .content .container .description ul li {
+    font-size: 20px;
+  }
+}
+#contacts .container .description h5 {
+  font-family: Roboto, sans-serif;
+  font-weight: 500;
+  line-height: 100%;
+}
+#contacts .container .description ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  list-style: none;
+}
+#contacts .container .description ul li {
+  font-family: Roboto, sans-serif;
+  font-weight: 300;
+  line-height: 100%;
+}
+#contacts .container #map .map-frame {
+  border: none;
+  width: 100%;
+  height: 100%;
 }
 
 /*# sourceMappingURL=contacts.css.map */
