--- a/style/contacts.scss
+++ b/style/contacts.scss
@@ -1,53 +1,97 @@
-
 @media (min-width: 1920px) {
   #contacts {
     padding: 75px 0;
-
     .content {
       height: 813px;
-
       .container {
         padding-top: 75px;
         display: flex;
         justify-content: space-between;
         align-items: start;
-
         .description {
           width: 282px;
           height: 244px;
           position: relative;
-
           h5 {
             width: 227px;
-            font-family: Roboto, sans-serif;
-            font-weight: 500;
             font-size: 28px;
-            line-height: 100%;
           }
-
           ul {
             position: absolute;
             top: 116px;
             left: 0;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
             height: 128px;
-            list-style: none;
-
             li {
-              font-family: Roboto, sans-serif;
-              font-weight: 300;
               font-size: 22px;
-              line-height: 100%;
             }
           }
         }
-
-        .map {
+        #map {
           width: 960px;
           height: 620px;
         }
+      }
+    }
+  }
+}
+
+@media (min-width: 1024px) and (max-width: 1919px) {
+  #contacts {
+    padding: 60px 0;
+    .content {
+      height: 614px;
+      .container {
+        padding-top: 60px;
+        display: grid;
+        grid-template-columns: 274px 694px;
+        grid-template-rows: 454px;
+        justify-content: space-between;
+        .description {
+          h5 {
+            height: 56px;
+            width: 185px;
+            font-size: 24px;
+          }
+          ul {
+            width: 274px;
+            height: 99px;
+            margin-top: 35px;
+            li {
+              font-size: 20px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+#contacts {
+  .container {
+    .description {
+      h5 {
+        font-family: Roboto, sans-serif;
+        font-weight: 500;
+        line-height: 100%;
+      }
+      ul {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        list-style: none;
+        li {
+          font-family: Roboto, sans-serif;
+          font-weight: 300;
+          line-height: 100%;
+        }
+      }
+
+    }
+    #map {
+      .map-frame {
+        border: none;
+        width: 100%;
+        height: 100%;
       }
     }
   }
