--- a/style/footer.scss
+++ b/style/footer.scss
@@ -1,102 +1,173 @@
 @media (min-width: 1920px) {
   footer {
-    display: flex;
-    justify-content: center;
     height: 392px;
-    width: 100%;
-
     .content {
       width: 1440px;
-      height: 392px;
-      position: relative;
-
       .logo {
-        position: absolute;
         top: 75px;
         left: 0;
       }
-
       nav {
         width: 363px;
         height: 128px;
-        position: absolute;
         top: 87px;
         left: 340px;
-
-        ul {
-          height: 100%;
-          width: 100%;
-          display: grid;
-          justify-content: space-between;
-          align-content: space-between;
-          grid-template-rows: repeat(3, 1fr);
-          grid-template-columns: repeat(2, 1fr);
-          list-style: none;
-
-          li {
-            a {
-              font-family: Roboto, sans-serif;
-              font-weight: 200;
-              font-size: 22px;
-              line-height: 100%;
-              letter-spacing: 2px;
-              color: white;
-              text-decoration: none;
-              transition: color 0.35s ease;
-            }
-
-            a:hover {
-              color: rgba(157, 134, 101, 1);
-            }
-          }
+        li {
+          font-size: 22px;
+          letter-spacing: 2px;
         }
       }
-
       .social {
-        position: absolute;
         width: 340px;
         height: 48px;
         top: 162px;
         left: 1100px;
-        display: flex;
-        justify-content: space-between;
-
         img {
           height: 100%;
-          display: block;
         }
       }
-
       .bar {
-        height: 3px;
         width: 1940px;
         top: 265px;
         left: -250px;
-        position: absolute;
-        background-color: rgba(102, 102, 102, 1)
       }
-
       .bottom {
-        position: absolute;
         top: 318px;
-        width: 100%;
         height: 24px;
+      }
+    }
+  }
+}
 
+
+@media (min-width: 1024px) and (max-width: 1919px) {
+  footer {
+    height: 368px;
+    .content {
+      width: 984px;
+      .logo {
+        width: 194px;
+        height: 33px;
+        position: absolute;
+        left: 0;
+        top: 60px;
+        .pyramid {
+          width: 49px;
+          height: 26px;
+        }
+        h3 {
+          font-family: Forum,serif;
+          font-weight: 400;
+          font-size: 28px;
+          line-height: 100%;
+          letter-spacing: 5px;
+          text-transform: uppercase;
+          color: white;
+          display: inline-block;
+          width: 120px;
+          margin-left: 20px;
+        }
+      }
+      nav {
+        position: absolute;
+        width: 313px;
+        height: 128px;
+        top: 65px;
+        left: 239px;
         ul {
-          height: 100%;
-          width: 100%;
-          display: flex;
-          justify-content: space-between;
-          list-style: none;
-
           li {
+            a {
+              font-size: 22px;
+              letter-spacing: 2px;
+            }
+          }
+        }
+      }
+      .social {
+        width: 340px;
+        height: 48px;
+        top: 145px;
+        left: 644px;
+      }
+      .bar {
+        width: 100%;
+        top: 243px;
+      }
+      .bottom {
+        height: 122px;
+        top: 246px;
+      }
+    }
+  }
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  .content {
+    position: relative;
+    height: 100%;
+    .logo {
+      position: absolute;
+    }
+    nav {
+      position: absolute;
+      ul {
+        height: 100%;
+        width: 100%;
+        display: grid;
+        justify-content: space-between;
+        align-content: space-between;
+        grid-template-rows: repeat(3, 1fr);
+        grid-template-columns: repeat(2, 1fr);
+        list-style: none;
+        li {
+          a {
             font-family: Roboto, sans-serif;
             font-weight: 200;
-            font-size: 22px;
-            line-height: 22px;
-            letter-spacing: 2px;
+            line-height: 100%;
             color: white;
+            text-decoration: none;
+            transition: color 0.35s ease;
           }
+          a:hover {
+            color: rgba(157, 134, 101, 1);
+          }
+        }
+      }
+    }
+    .social {
+      position: absolute;
+      display: flex;
+      justify-content: space-between;
+      img {
+        width: 48px;
+        height: 48px;
+      }
+    }
+    .bar {
+      height: 3px;
+      position: absolute;
+      background-color: rgba(102, 102, 102, 1);
+    }
+    .bottom {
+      position: absolute;
+      width: 100%;
+      ul {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        list-style: none;
+        li {
+          font-family: Roboto, sans-serif;
+          font-weight: 200;
+          font-size: 22px;
+          line-height: 22px;
+          letter-spacing: 2px;
+          color: white;
         }
       }
     }
