--- a/style/parallax.css
+++ b/style/parallax.css
@@ -1,3 +1,31 @@
-
+@media (min-width: 1920px) {
+  .main-gap {
+    width: 1920px;
+  }
+}
+@media (min-width: 1024px) and (max-width: 1919px) {
+  .main-gap {
+    width: 1024px;
+  }
+}
+.main-gap {
+  height: 400px;
+  position: relative;
+  overflow: hidden;
+}
+.main-gap .gap-container {
+  z-index: -4;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.main-gap .gap-container .gap-view {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
 
 /*# sourceMappingURL=parallax.css.map */
